# micasa

./: .gitignore  CMakeLists.txt  LICENSE  Micasa.sln  README.md  main.cpp  settings-schema.json  settings.json
Micasa/: Micasa.vcxproj  Micasa.vcxproj.filters  Resource.rc  background.cpp  background.hpp  config.hpp  context_menu.cpp  context_menu.hpp  editable_item.hpp  folder_view.cpp  folder_view.hpp  image_item.cpp  image_item.hpp  image_scaler.cpp  image_scaler.hpp  image_window.hpp  image_window_ui.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window_ui.hpp  moc_scene.cpp  opengl_widget.hpp  pixmap_item.cpp  pixmap_item.hpp  resources.rcc  scene.cpp  scene.hpp  screen.cpp  screen.hpp  settings.cpp  settings.hpp  thread_pool.cpp  thread_pool.h  viewable_item.hpp
resource/: license-icon.html  resources.qrc
src/: main_window.cpp  main_window.hpp
src/config/: main.cpp  main.hpp  theme.hpp
src/image/: item.cpp  item.hpp  manager.cpp  manager.hpp  scaler.cpp  scaler.hpp  scene.cpp  scene.hpp  view.cpp  view.hpp
